--- a/package.json
+++ b/package.json
@@ -28,6 +28,11 @@
       }
     ]
   },
-  "license": "MIT"
+  "license": "MIT",
+  "repository": {
+  "type": "git",
+  "url": "https://github.com/adityaburadkar/sef-theme"
+}
+
 
 }
